--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     ><img
                         class="img2"
                         src="./img/mountain.png"
+                        alt="backgroundmountainimage"
                         width="40"
                         style="margin: -25px -10px -25px -20px"
                     />
@@ -82,7 +83,7 @@
                     </div>
                 </li>
             </ul>
-            <img src="./img/menu-btn.png" alt="" class="menu-btn" />
+            <img src="./img/menu-btn.png" alt="menu-btn" class="menu-btn" />
         </nav>
         <!--navbar-->
 
@@ -109,7 +110,7 @@
                 </div>
                 <div class="row">
                     <article class="card col">
-                        <img class="card-img" src="./img/img1.jfif" />
+                        <img class="card-img" src="./img/img1.jfif" alt="card-img"/>
                         <h4 class="dark">Everest camp trek</h4>
                         <p class="font-color">
                             Everest base camp trek is without a doubt, one of
@@ -118,7 +119,7 @@
                         <a href="#" class="ctn">All Details</a>
                     </article>
                     <article class="card col">
-                        <img src="./img/img2.jfif" />
+                        <img src="./img/img2.jfif" alt="holidayimage"/>
                         <h4 class="dark">Walking holidays</h4>
                         <p class="font-color">
                             Join small guided group walks, enjoy a challenging
@@ -128,7 +129,7 @@
                         <a href="#" class="ctn">All Details</a>
                     </article>
                     <article class="card col">
-                        <img src="./img/img2.jfif" />
+                        <img src="./img/img2.jfif" alt="beachesimage"/>
                         <h4 class="dark">Andaman Beaches</h4>
                         <p class="font-color">
                             Diving in Andaman Beaches is exceptional. The costal
@@ -176,10 +177,10 @@
                 </div>
                 <div class="image-col">
                     <div class="image-gallery">
-                        <img src="./img/img3.png" alt="" />
-                        <img src="./img/img4.png" alt="" />
-                        <img src="./img/img5.png" alt="" />
-                        <img src="./img/img6.png" alt="" />
+                        <img src="./img/img3.png" alt="img3" />
+                        <img src="./img/img4.png" alt="img4" />
+                        <img src="./img/img5.png" alt="img5" />
+                        <img src="./img/img6.png" alt="img6" />
                     </div>
                 </div>
             </div>
@@ -202,13 +203,13 @@
                         <input type="radio" name="slider" id="item-3" />
                         <div class="cards">
                             <label class="cardt" for="item-1" id="col-img-1">
-                                <img src="./img/carousel-img4.jpg" />
+                                <img src="./img/carousel-img4.jpg" alt="carousel-img4"/>
                             </label>
                             <label class="cardt" for="item-2" id="col-img-2">
-                                <img src="./img/carousel-img5.jpg" />
+                                <img src="./img/carousel-img5.jpg" alt="carousel-img5" />
                             </label>
                             <label class="cardt" for="item-3" id="col-img-3">
-                                <img src="./img/carousel-img6.jpg" />
+                                <img src="./img/carousel-img6.jpg" alt="carousel-img6/>
                             </label>
                             
                         </div>
@@ -230,6 +231,7 @@
                                     src="./img/mountain_dark.jpg"
                                     width="200"
                                     style="border-radius: 12%"
+                                    alt="mountain_dark"
                                 />
                                 <br />
                                 <h1 class="logo" style="font-size: 50px">
