--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     ><img
                         class="img2"
                         src="./img/mountain.png"
-                        alt="backgroundmountainimage"
                         width="40"
                         style="margin: -25px -10px -25px -20px"
+                        alt="backgroundmountainimage"
                     />
                     <h1 class="logo">&nbsp;ADVENTURE</h1></a
                 ></span
@@ -83,7 +83,7 @@
                     </div>
                 </li>
             </ul>
-            <img src="./img/menu-btn.png" alt="menu-btn" class="menu-btn" />
+            <img src="./img/menu-btn.png" class="menu-btn" alt="menu-btn"/>
         </nav>
         <!--navbar-->
 
