--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Come explore upcoming adventure events and join them for having fun">
         <meta name="google-site-verification" content="OAjSJTe4_M9f8wKLuBbmT22QhwNkVB7EhEdVQFwUnyA" />
         <title>ADVENTURE</title>
         <link
